# marketplace-of-ideas

./: .gitignore  README.md  agent.py  network.py  pyproject.toml  simulate_marketplace.py  simulation.py  simulations.py
moideas/: agent.py  network.py  proposition.py  simulate_marketplace.py  simulation.py  simulations.py
